added:Test cases, Feedback controller
