# app/Models/Feedback.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Feedback extends Model
+{
+    use HasFactory;
+    protected $table = 'feedback';
+    protected $fillable = [
+        'User_feedback'
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
